--- a/coffee webpage/about.html
+++ b/coffee webpage/about.html
@@ -10,7 +10,7 @@
 <p>Bhuvaneshwari colony, Sakkimangalam ,<br>Near to Melbourne road,Australia :)</p>
 <p><mark>OUR OTHER FUN THINGS AT OUR SHOP</mark></p>
 <video controls>
-<source src="C:\Users\ramji\OneDrive\Desktop\projectfoler\vedio\dance.mp4" type="video/mp4">
+<source src="..\vedio\dance.mp4" type="video/mp4">
 </video>
 <br>
 <p>TO KNOW HOW WE DO COFFEE REFER THIS :</P><BR>
