--- a/coffee webpage/home.html
+++ b/coffee webpage/home.html
@@ -20,7 +20,7 @@
 
 <br>
 <p style="text-align:center;">IF YOU WANNA BUY COFFEE CLICK THE COFFEE ICON</P>
-<a href="forms1.html"><img src="C:\Users\ramji\OneDrive\Desktop\projectfoler\IMAGES\cpy.jpg" target="_blank"></a>
+<a href="forms1.html"><img src="..\IMAGES\cpy.jpg" target="_blank"></a>
 </body>
 
 </html>
