--- a/coffee webpage/index1.html
+++ b/coffee webpage/index1.html
@@ -24,7 +24,7 @@ background-color:yellow;
 <div id="header"><h2>(: WELCOME TO COFFEE SHOP LOUNGE :)</h2></div>
 <a href="home.html">Home</a><br>
 <a href="about.html">About</a><br>
-<img src= "C:\Users\ramji\OneDrive\Desktop\projectfoler\IMAGES\cofeeshop.jpg" style="height:600px;width=1000px;title="coffeeshop">
+<img src= "..\IMAGES\cofeeshop.jpg" style="height:600px;width=1000px;title="coffeeshop">
 <br>
 <div id="footer">The contents in the webpage is subjected to copyright</div>
 </body>
